tests/snapshots/homelab/traefik-external-config.yaml
---
# Source: traefik-external-config/templates/dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-redirect
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.REPLACEME-domain.com`) && Path(`/dashboard`)
      middlewares:
        - name: dashboard-redirect-slash
      services:
        - kind: TraefikService
          name: noop@internal
  tls:
    secretName: traefik-dashboard-tls

---
# Source: traefik-external-config/templates/oidc.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: auth-oidc
  namespace: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.REPLACEME-domain.com`)
      kind: Rule
      middlewares:
        - name: oidc-auth
      services:
        - kind: TraefikService
          name: noop@internal
  tls:
    secretName: auth-tls

---
# Source: traefik-external-config/templates/dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dashboard-redirect-slash
  namespace: traefik
spec:
  redirectRegex:
    regex: ^(https?://[^/]+/dashboard)$
    replacement: ${1}/
    permanent: true
---
# Source: traefik-external-config/templates/oidc.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oidc-auth
  namespace: traefik
spec:
  plugin:
    traefikoidc:
      providerURL: "https://accounts.google.com"
      clientID: "urn:k8s:secret:google-oauth-credentials:client_id"
      clientSecret: "urn:k8s:secret:google-oauth-credentials:client_secret"
      callbackURL: "/oauth2/callback"
      logoutURL: "/oauth2/logout"
      sessionEncryptionKey: "urn:k8s:secret:oidc-session-key:oidc-session-key"
      scopes:
        - openid
        - email
        - profile
      allowedUserDomains:
        - REPLACEME-domain.com
      cookieDomain: ".REPLACEME-domain.com"
      redis:
        enabled: true
        address: "oidc-redis.traefik.svc.cluster.local:6379"
        keyPrefix: "traefikoidc:"
        cacheMode: "hybrid"
      logLevel: "debug"
      forceHTTPS: true
